[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/Objects/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scene/Entity/Character.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/Objects/Coin.tscn" type="PackedScene" id=3]
[ext_resource path="res://script/Level/Tutorial.gd" type="Script" id=4]
[ext_resource path="res://scene/Entity/Ennemy.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=20]

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 8.5, 15.5 )

[node name="Tutorial" type="Node2D"]
script = ExtResource( 4 )

[node name="LevelNavigation" type="Navigation2D" parent="." groups=["LevelNavigation"]]

[node name="TileMap" parent="LevelNavigation" groups=["LevelNavigation"] instance=ExtResource( 1 )]

[node name="Character" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 32 )

[node name="Ennemy" parent="." instance=ExtResource( 5 )]
position = Vector2( -81, 7 )
scale = Vector2( 0.5, 0.5 )
speed = 175

[node name="Coins" type="Node2D" parent="."]

[node name="Coin" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 128, -1 )

[node name="Coin2" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 128, -30 )

[node name="Coin3" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 101, -31 )

[node name="Coin4" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 74, -32 )

[node name="Coin5" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 50, -32 )

[node name="Coin6" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 30, -32 )

[node name="Coin7" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 7, -32 )

[node name="Coin8" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -16, -32 )

[node name="Coin9" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -32, -14 )

[node name="Coin10" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -32, 10 )

[node name="Coin11" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -32, 32 )

[node name="Coin12" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -32, 53 )

[node name="Coin13" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -32, 78 )

[node name="Coin14" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -18, 95 )

[node name="Coin15" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 5, 96 )

[node name="Coin16" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 26, 96 )

[node name="Coin17" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 48, 96 )

[node name="Coin18" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 69, 96 )

[node name="Coin19" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 91, 96 )

[node name="Coin20" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 111, 96 )

[node name="Coin21" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 127, 83 )

[node name="Coin22" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 128, 60 )

[node name="Coin23" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 128, 33 )

[node name="Coin24" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 176, 0 )

[node name="Coin25" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 175, -18 )

[node name="Coin26" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 176, -42 )

[node name="Coin27" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 175, -65 )

[node name="Coin28" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 152, -81 )

[node name="Coin29" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 119, -80 )

[node name="Coin30" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 85, -81 )

[node name="Coin31" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 47, -80 )

[node name="Coin32" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 19, -81 )

[node name="Coin33" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -10, -80 )

[node name="Coin34" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -43, -80 )

[node name="Coin35" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -79, -81 )

[node name="Coin36" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -80, -54 )

[node name="Coin37" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( -81, -23 )

[node name="Coin38" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 177, 29 )

[node name="Coin39" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 176, 56 )

[node name="Coin40" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 179, 81 )

[node name="Coin41" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 177, 106 )

[node name="Coin42" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 178, 135 )

[node name="Coin43" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 155, 146 )

[node name="Coin44" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 131, 145 )

[node name="Coin45" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 100, 146 )

[node name="Coin46" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 220, 31 )

[node name="Coin47" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 236, 31 )

[node name="Coin48" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 236, 31 )

[node name="Coin49" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 253, 31 )

[node name="Coin50" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 268, 31 )

[node name="Coin51" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 283, 31 )

[node name="Coin52" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 298, 31 )

[node name="Coin53" parent="Coins" instance=ExtResource( 3 )]
position = Vector2( 313, 31 )

[node name="Door1" type="Node2D" parent="."]
position = Vector2( 0, 1 )

[node name="Door1" type="StaticBody2D" parent="Door1"]
position = Vector2( 150, 33 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Door1/Door1"]
position = Vector2( 2.5, -1.5 )
scale = Vector2( 7.5, 14.5 )
mesh = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door1/Door1"]
position = Vector2( 2.5, -1.5 )
shape = SubResource( 21 )

[node name="Door2" type="Node2D" parent="."]
position = Vector2( 49, 1 )

[node name="Door1" type="StaticBody2D" parent="Door2"]
position = Vector2( 149, 33 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Door2/Door1"]
position = Vector2( 2.5, -1.5 )
scale = Vector2( 7.5, 14.5 )
mesh = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door2/Door1"]
position = Vector2( 2.5, -1.5 )
shape = SubResource( 21 )

[node name="Door3" type="Node2D" parent="."]
position = Vector2( 49, 1 )

[node name="Door1" type="StaticBody2D" parent="Door3"]
position = Vector2( 276, 33 )
__meta__ = {
"_edit_group_": true
}

[node name="MeshInstance2D" type="MeshInstance2D" parent="Door3/Door1"]
position = Vector2( 2.5, -1.5 )
scale = Vector2( 7.5, 14.5 )
mesh = SubResource( 20 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door3/Door1"]
position = Vector2( 2.5, -1.5 )
shape = SubResource( 21 )
